added ressources and architecture begining

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest'haut votre restaurant gastronomique à portée de clic!</title>
+    <meta name="description" content="restaurant gastronomique accessible de partout en ligne en un simple clic!">
 </head>
 <body>
     
