--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rest'haut votre restaurant gastronomique à portée de clic!</title>
+    <title>Rest'O votre restaurant gastronomique à Angoulème, cuisine des saveurs bio</title>
     <meta name="description" content="restaurant gastronomique accessible de partout en ligne en un simple clic!">
+    <link rel="stylesheet" href="./assets/styles/index.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>home</li>
+                <li>reservations</li>
+                <li>menu</li>
+                <li>blog</li>
+                <li>pages</li>
+                <li>shop</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
+
 </html>
