added stule for header

--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Rest'O votre restaurant gastronomique à Angoulème, cuisine des saveurs bio</title>
-    <meta name="description" content="restaurant gastronomique accessible de partout en ligne en un simple clic!">
+
+    <meta name="description"
+        content="restaurant gastronomique à Angoulème, cuisine accessible de partout en ligne et bio ouvert 7 jours sur 7 en un simple clic!">
+
+    <link rel="shorcut icon" href="./assets/img/ic-plate.png">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+
     <link rel="stylesheet" href="./assets/styles/index.css">
+
+
 </head>
 
 <body>
     <header>
         <nav>
-            <ul>
+            <div class="logo">
+                <h3>Rest`o</h3>
+            </div>
+            <ul class="nav-elements">
                 <li>home</li>
                 <li>reservations</li>
                 <li>menu</li>
@@ -21,9 +37,152 @@
                 <li>shop</li>
                 <li>contact</li>
             </ul>
+            <div class="nav-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
         </nav>
+        <div class="header-text">
+            <div>
+                <h2>Angoulème</h2>
+                <h1>REST'O</h1>
+                <img src="./assets/img/ic-plate-big.png" alt="icon-plate">
+                <h6>INGREDIENTS FRAIS AU SERVICE DES PAPILLES !</h6>
+            </div>
+        </div>
     </header>
 
+    <section class="section1">
+        <div class="intro-text">
+            <h2>Discover</h2>
+            <h3>OUR STORE</h3>
+            <img src="./assets/img/ic-plate.png" alt="icon-plate">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quibusdam explicabo fuga inventore
+                veniam, quam velit quasi nostrum aperiam iusto dignissimos odio exercitationem, facilis nulla dolore!
+                Tempora, distinctio velit. Iste?
+            </p>
+            <img src="./assets/img/avatar-01.jpg" alt="chef rest'o picture">
+            <h4>Russel Stephens</h4>
+            <h5>CHEF COOK</h5>
+        </div>
+        <div class="intro-pic"></div>
+    </section>
+    <section class="section2">
+        <h2>Discover</h2>
+        <img src="./assets/img/ic-plate.png" alt="icon-plate">
+        <ul>
+            <li>Breakfast</li>
+            <li>Lunch</li>
+            <li>Dinner</li>
+            <li>Drinks</li>
+            <li>Other</li>
+        </ul>
+        <div class="meals">
+            <div class="meal">
+                <img src="./assets/img/dish-item-01.jpg" alt="meal-1">
+                <div class="meal-text">
+                    <h3>Italian source mushroom</h3>
+                    <p>Mushroom / Garlic / Veggies</p>
+                </div>
+                <p>12€</p>
+            </div>
+            <div class="meal">
+                <img src="./assets/img/dish-item-02.jpg" alt="meal-2">
+                <div class="meal-text">
+                    <h3>Fried potatoes with garlic</h3>
+                    <p>Potatoes / Garlic / Olive Oil</p>
+                </div>
+                <p>22€</p>
+            </div>
+            <div class="meal">
+                <img src="./assets/img/dish-item-03.jpg" alt="meal-3">
+                <div class="meal-text">
+                    <h3>Tuna roast source</h3>
+                    <p>Tuna / Potatoes / Rice</p>
+                </div>
+                <p>15€</p>
+            </div>
+            <div class="meal">
+                <img src="./assets/img/dish-item-04.jpg" alt="meal-4">
+                <div class="meal-text">
+                    <h3>Roast beef (4 sticks)</h3>
+                    <p>Beef / Veggies / Shoyu</p>
+                </div>
+                <p>19€</p>
+            </div>
+            <div class="meal">
+                <img src="./assets/img/dish-item-05.jpg" alt="meal-5">
+                <div class="meal-text">
+                    <h3>Salted fried chiken</h3>
+                    <p>Chiken / Olive Oil / Salt</p>
+                </div>
+                <p>18€</p>
+            </div>
+            <div class="meal">
+                <img src="./assets/img/dish-item-06.jpg" alt="meal-6">
+                <div class="meal-text">
+                    <h3>Crab with curry sources</h3>
+                    <p>Crab / Potatoes / Rice</p>
+                </div>
+                <p>16€</p>
+            </div>
+            <div class="meal">
+                <img src="./assets/img/dish-item-07.jpg" alt="meal-7">
+                <div class="meal-text">
+                    <h3>Baked potato pizza</h3>
+                    <p>Bread / Potatoes / Cheese</p>
+                </div>
+                <p>22€</p>
+            </div>
+        </div>
+    </section>
+    <section class="section3">
+        <div class="form-content">
+            <div class="hours">
+                <div class="hours-content">
+                    <h3>Time</h3>
+                    <h4>OPEN</h4>
+                    <img src="./assets/img/ic-plate.png" alt="icon-plate">
+                    <h5>monday - friday</h5>
+                    <p>7AM - 11AM (Breakfast)</p>
+                    <p>11AM - 10PM (Lunch/Dinner)</p>
+                    <h5>saturday / sunday</h5>
+                    <p>8AM - 1PM (Brunch)</p>
+                    <p>1PM - 9PM (Lunch/Dinner)</p>
+                    <h5>+33 06 06 06 06 06</h5>
+                </div>
+            </div>
+            <div class="form-infos">
+                <div class="form-infos-container">
+                    <h2>Reservations</h2>
+                    <h3>ONLINE BOOKING</h3>
+                    <img src="./assets/img/ic-plate.png" alt="icon-plate">
+                    <div class="form-inputs">
+                        <select name="" id="people">
+                            <option value="">People</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                        </select>
+                        <input type="date" id="booking-date" name="booking-date" value="2024-02-10" min="2023-01-01"
+                            max="2024-12-31" />
+                        <input type="time" id="bookong-time" name="booking-time" min="07:00" max="21:00" />
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Phone">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <button>BOOK NOW</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
