style for sections 1 , 2

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 veniam, quam velit quasi nostrum aperiam iusto dignissimos odio exercitationem, facilis nulla dolore!
                 Tempora, distinctio velit. Iste?
             </p>
-            <img src="./assets/img/avatar-01.jpg" alt="chef rest'o picture">
+            <img src="./assets/img/avatar-01.jpg" alt="Russel Stephens chef picture">
             <h4>Russel Stephens</h4>
             <h5>CHEF COOK</h5>
         </div>
