style section 3 and 4

--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
             </div>
         </div>
     </section>
+    <section class="section5">
+        <div class="quote-container">
+            <div class="text-container">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, eius quos necessitatibus veritatis
+                maiores perspiciatis aperiam enim iure nobis voluptates deserunt quidem, pariatur suscipit assumenda
+                eum. Facilis placeat dolorum commodi.
+            </div>
+            <h2>Russel Stephens</h2>
+            <p>CEO - HeadPassion</p>
+        </div>
+    </section>
 </body>
 
 </html>
