started to add footer

--- a/index.html
+++ b/index.html
@@ -236,12 +236,41 @@
             <div class="text-container">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, eius quos necessitatibus veritatis
                 maiores perspiciatis aperiam enim iure nobis voluptates deserunt quidem, pariatur suscipit assumenda
-                eum. Facilis placeat dolorum commodi.
+                eum. Facilis placeat commodi.
             </div>
             <h2>Russel Stephens</h2>
             <p>CEO - HeadPassion</p>
         </div>
     </section>
+    <footer>
+        <div class="footer-content">
+            <div class="left-part">
+                <H2>REST'O</H2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet iusto itaque placeat eaque,
+                    repellat
+                    commodi quis, deleniti obcaecati, laudantium illo illum! Ab quod laboriosam tenetur, nesciunt
+                    facilis
+                    blanditiis error molestias!
+                </p>
+            </div>
+            <div class="right-part">
+                <div class="news-letter">
+                    <h3>NEWSLETTER</h3>
+                    <input type="email" placeholder="Your Email Address">
+                </div>
+                <div class="follow-us">
+                    <h3>FOLLOW US :</h3>
+                    <ul>
+                        <li><i class="fab fa-facebook-f"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-pinterest"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
