--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <footer>
         <div class="footer-content">
             <div class="left-part">
-                <H2>REST'O</H2>
+                <H2>REST`O</H2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet iusto itaque placeat eaque,
                     repellat
