responsive media queries added

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                         <input type="date" id="booking-date" name="booking-date" value="2024-02-10" min="2023-01-01"
                             max="2024-12-31" />
                         <input type="time" id="bookong-time" name="booking-time" min="07:00" max="21:00" />
-                        <input type="text" placeholder="Name">
-                        <input type="text" placeholder="Phone">
-                        <input type="email" placeholder="Email">
+                        <input type="text" placeholder="Name"  autocomplete="none">
+                        <input type="text" placeholder="Phone" autocomplete="none">
+                        <input type="email" placeholder="Email"autocomplete="none">
                     </div>
                     <button>BOOK NOW</button>
                 </div>
@@ -257,7 +257,7 @@
             <div class="right-part">
                 <div class="news-letter">
                     <h3>NEWSLETTER</h3>
-                    <input type="email" placeholder="Your Email Address">
+                    <input type="email" placeholder="Your Email Address" autocomplete="none" >
                 </div>
                 <div class="follow-us">
                     <h3>FOLLOW US :</h3>
